<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:background="#D5D5D5">

    <RelativeLayout
        android:background="@drawable/rounded_corners_layout"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="400dp">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/lul_str01"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="italic" />
        <TextView android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lul_str02"
            android:layout_below="@id/txt1"
            android:paddingBottom="20dp"
            android:textColor="#000000"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:hint="@string/lul_hnt01"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textEmail"
            android:hint="@string/lul_hnt02"
            android:inputType="textPassword"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/botonIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@id/textPassword"
            android:layout_toEndOf="@id/botonRegistra"
            android:backgroundTint="#E53935"
            android:gravity="center"
            android:text="@string/lul_btn01" />

        <Button
            android:id="@+id/botonRegistra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPassword"
            android:text="Registrar" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>