<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:background="#D5D5D5">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corners_layout"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/crea_tu_nombre_de_usuario"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:paddingBottom="20dp"
            android:text="@string/nombre_de_usuario"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/botonContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@id/textUsername"
            android:layout_centerInParent="true"
            android:layout_marginTop="2dp"
            android:backgroundTint="#E53935"
            android:gravity="center"
            android:text="@string/continuar" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>