<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharSelect">

    <!--Diseño para la pantalla que hace de antesala al juego
    La lógica de selección aleatoria está preparada antes de entrar
    a esta página por lo que sólo queda pasar al tablero-->
    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lcs_str01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/chrctrSelectTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/lcs_str02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt4"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imgChrctrSelect"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/chrctrSelectTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnSelCharStart"
        android:src="@drawable/smashball"/>

    <Button
        android:id="@+id/btnSelCharStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgChrctrSelect"
        android:text="@string/lcs_btn01"
        android:backgroundTint="#E53935"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>